Add an X button to close the layout editor
https://github.com/Polyjuice/Launcher/issues/134

--- a/src/css/jte-fontawesome-codes.css
+++ b/src/css/jte-fontawesome-codes.css
@@ -18,3 +18,4 @@
 .jte-icon-eye-off:before { content: '\e810'; } /* '' */
 .jte-icon-angle-up:before { content: '\e811'; } /* '' */
 .jte-icon-angle-left:before { content: '\e812'; } /* '' */
+.jte-icon-cancel:before { content: '\e813'; } /* '' */
