Improve leftToRight UI, add bottomUp UI
https://github.com/Juicy/juicy-tile-editor/issues/77

--- a/src/css/jte-fontawesome-codes.css
+++ b/src/css/jte-fontawesome-codes.css
@@ -28,3 +28,7 @@
 .jte-icon-align-center:before { content: '\e81a'; } /* '' */
 .jte-icon-align-right:before { content: '\e81b'; } /* '' */
 .jte-icon-align-justify:before { content: '\e81c'; } /* '' */
+.jte-icon-down:before { content: '\e81d'; } /* '' */
+.jte-icon-left:before { content: '\e81e'; } /* '' */
+.jte-icon-right:before { content: '\e81f'; } /* '' */
+.jte-icon-up:before { content: '\e820'; } /* '' */
